--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: url('sua-imagem-de-fundo.jpg') no-repeat center center fixed;
+            background: url("funfo.JPG.jpg") no-repeat center center fixed;
             background-size: cover;
             color: #f4f4f9;
         }
