--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: url("funfo.JPG.jpg") no-repeat center center fixed;
+            background: url("https://i.pinimg.com/736x/2e/11/f8/2e11f8d415b155b17325b03eacb021d9.jpg") no-repeat center center fixed;
             background-size: cover;
             color: #f4f4f9;
         }
