--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </section>
 
 <footer>
-    <p>Desenvolvido por Alessàndrho Peréira. Todos os direitos reservados.</p>
+    <p>Desenvolvido por Alessàndrho Peréira</p>
 </footer>
 
 </body>
